added typography mixins

--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,24 @@
     <!--[/htmlclean-protect]-->
   </head>
   <body>
-  <br><br>
   <main class="container">
-    <h1>Merh asdf!!!!</h1>
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <h1>Heading 1</h1>
+    <p class="lead"><strong>Lead Text: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-    <h2>asdf</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci vitae facilis, modi quisquam in accusamus impedit quas quos doloribus saepe, esse maxime asperiores! Obcaecati fugit, ipsum tempore quaerat magni ea.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-    <p> Illum voluptatibus quo odio alias possimus distinctio natus incidunt minus magni qui, iste esse a et, at officia ad id, laboriosam? Dolores.</p>
+    <h2>Heading 2</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci vitae facilis, modi </p>
+
+    <h3>Heading 3</h3>
+    <p>quisquam in accusamus impedit quas quos doloribus saepe, esse masdaxime asperiores! Obcaecati fugit</p>
+
+    <h4>Heading 4</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam hic aut nulla quasi necessitatibus sint quibusdam possimus! Quis cumque quidem, explicabo reprehenderit sunt fuga voluptate aliquid eius, dolorum, voluptatibus nihil.</p>
+
+    <h5>Heading 5</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum quis maiores id aliquid a doloremque consequuntur neque eos!</p>
+
+    <h6>Heading 6</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores amet, atque veritatis.</p>
   </main>
     <!--[htmlclean-protect]-->
     <!-- inject:js -->
