moved global folder; added image compression to build

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
   <main class="container">
+    
+    <img class="phish" src="img/phish.jpg" alt="Phish logo">
+
     <h1>Heading 1</h1>
     <p class="lead"><strong>Lead Text: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
 
     <h2>Heading 2</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci vitae facilis, modi </p>
