more sass tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,60 @@
     <!--[/htmlclean-protect]-->
   </head>
   <body>
-  <main class="container">
+
+ <header>
+  <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">Fixed navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/album.htm">Album</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/blog.htm">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/carousel.htm">Carousel</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/cover-page.htm">Cover</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/grid.htm">Grid</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/jumbotron.htm">Jumbotron</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/jumbotron-narrow">Narrow</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/navbars">Navbars</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/starter.htm">Starter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="blank" href="templates/sticky-footer.htm">Footer</a>
+            </li>
+            
+          </ul>
+        </div>
+    </nav>
+</header>
+
+  <main class="container" role="main">
     
-    <img class="phish" src="img/phish.jpg" alt="Phish logo">
 
     <h1>Heading 1</h1>
     <p class="lead"><strong>Lead Text: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-
 
     <h2>Heading 2</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci vitae facilis, modi </p>
