--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         <div class="container">
           <h1 class="display-1">Bootstrap Starter Theme</h1>
           <p class="lead">Your site is almost ready!</p>
-          <p>This theme built with Gulp for quick setup from the command line.  Start with the Bash prompt.  Clone the repo.  Enter <span class="txt-code">npm install </span>.  Enter <span class="txt-code">gulp</span>.  Open variables.scss.  Make something.  You're almost done!</p>
+          <p>This theme built with Gulp for quick setup from the command line.  Start with the Bash prompt.  Clone the repo.  Enter <span class="txt-code">npm install </span>.  You're almost done!  Enter <span class="txt-code">gulp</span>.  Open variables.scss.  Make something. </p>
         </div>        
       </div>
     </header>
